--- a/sample/package.json
+++ b/sample/package.json
@@ -15,9 +15,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "husky": "^8.0.3",
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
-    "react-date-picker": "latest",
+    "react-date-picker": "../../react-date-picker",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
