--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "9.2.0",
   "description": "A date picker for your React app.",
   "main": "dist/entry.js",
+  "source": "src/entry.js",
   "types": "./index.d.ts",
   "scripts": {
     "build": "yarn build-js && yarn copy-styles && yarn copy-types",
@@ -12,7 +13,6 @@
     "copy-types": "node ./copy-types.mjs",
     "jest": "jest",
     "lint": "eslint . --ext .js,.jsx",
-    "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
     "prettier": "prettier --check . --cache",
     "test": "yarn lint && yarn prettier && yarn jest"
